--- a/src/main/webapp/scripts/app/usager/etudier/address/address.html
+++ b/src/main/webapp/scripts/app/usager/etudier/address/address.html
@@ -17,7 +17,7 @@
 		    	</span>
 		    </div>
 		    <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 form-title-text">
-		    	<p translate="address.form.title">Address</p>
+		    	<p translate="etudier.address.step.long">Address</p>
 		    </div>
 		</div>
 		<br>
