--- a/src/main/webapp/scripts/app/usager/etudier/identity/identity.html
+++ b/src/main/webapp/scripts/app/usager/etudier/identity/identity.html
@@ -17,7 +17,7 @@
 		    	</span>
 		    </div>
 		    <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10 form-title-text">
-		    	<p translate="identity.form.title">Identity</p>
+		    	<p translate="etudier.identity.step.long">Identity</p>
 		    </div>
 		</div>
 		<br>
