--- a/src/main/webapp/scripts/app/usager/renouveler/renouveler.html
+++ b/src/main/webapp/scripts/app/usager/renouveler/renouveler.html
@@ -7,7 +7,7 @@
     <br>
     <div class="row">
     	<div class="col-xs-8 col-xs-offset-1 col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-lg-8 col-lg-offset-1">
-    		<h3 translate="etudier.step.title">4 steps for your request</h3>
+    		<h3 translate="etudier.step.title">5 steps for your request</h3>
     	</div>
    	</div>
    	<br><br>
@@ -68,11 +68,10 @@
     		<ul>
 				<li>d'un certificat d’inscription ou pré-inscription dans un établissement d'enseignement français,</li>
 				<li>de justificatifs de ressources financières suffisantes, soit supérieures ou égales à 615 € mensuels (attestation de bourse, attestation bancaire, fiches de paye ou attestation de prise en charge par un garant),</li>
-				<li>En cas de changement d'état-civil, d'un passeport valide et d'un extrait de votre acte de naissance avec filiation ou d'une copie intégrale de votre acte de naissance,</li>
-				<li>En cas de changement d'adresse, d'un justificatif de domicile,</li>
+				<li>en cas de changement d'état-civil, d'un passeport valide et d'un extrait de votre acte de naissance avec filiation ou d'une copie intégrale de votre acte de naissance,</li>
+				<li>en cas de changement d'adresse, d'un justificatif de domicile,</li>
     		</ul>
 			<p>Tous les justificatifs doivent être accompagnés, le cas échéant, de leur traduction en français par un traducteur interprète agréé près une cour d’appel.</p>
-			<p>Vous devrez apporter les originaux de ces documents lors du rendez-vous.</p>
     	</div>
 	</div>
 	<div class="row row-center">
