--- a/src/main/webapp/scripts/app/agent/etudier/recevability/recevability.html
+++ b/src/main/webapp/scripts/app/agent/etudier/recevability/recevability.html
@@ -83,7 +83,7 @@
 						<div class="panel-heading" style="text-align: center">
 							<span class="glyphicon glyphicon-arrow-right hand" ng-show="identity.images.length > 1" ng-click="nextImg(identity)" style="float: right;"></span>
 							<span class="glyphicon glyphicon-arrow-left hand" ng-show="identity.images.length > 1" ng-click="previousImg(identity)" style="float: left;"></span>
-							<span translate="{{identity.currentImg.title}}"></span>
+							<span translate="{{identity.currentImg.title}}"></span><span> ({{identity.currentImgIndex + 1}}/{{identity.images.length}})</span>
 						</div>
 						<div class="panel-body">
 							<img src="{{identity.currentImg.src}}" class="img-responsive">
@@ -245,7 +245,7 @@
 						<div class="panel-heading" style="text-align: center">
 							<span class="glyphicon glyphicon-arrow-right hand" ng-show="project.images.length > 1" ng-click="nextImg(project)" style="float: right;"></span>
 							<span class="glyphicon glyphicon-arrow-left hand" ng-show="project.images.length > 1" ng-click="previousImg(project)" style="float: left;"></span>
-							<span translate="{{project.currentImg.title}}"></span>
+							<span translate="{{project.currentImg.title}}"></span><span> ({{project.currentImgIndex + 1}}/{{project.images.length}})</span>
 						</div>
 						<div class="panel-body">
 							<img src="{{project.currentImg.src}}" class="img-responsive">
