--- a/src/main/webapp/scripts/app/usager/renouveler/payment/payment.html
+++ b/src/main/webapp/scripts/app/usager/renouveler/payment/payment.html
@@ -15,7 +15,7 @@
 	    	</span>
 	    </div>
 	    <div class="col-xs-10 form-title-text">
-	    	<p translate="payment.form.title.renouvellement">Payment</p>
+	    	<p translate="etudier.payment.step.long">Payment</p>
 	    </div>
 	</div>
 	<br>
