--- a/src/main/webapp/scripts/app/usager/etudier/etudier.html
+++ b/src/main/webapp/scripts/app/usager/etudier/etudier.html
@@ -1,69 +1,69 @@
 <div ng-cloak>
     <div class="row">
-    	<div class="col-xs-11 col-xs-offset-1 col-sm-11 col-sm-offset-1 col-md-11 col-md-offset-1 col-lg-11 col-lg-offset-1 title-underscore">
+    	<div class="col-xs-12 col-sm-11 col-sm-offset-1 title-underscore">
     		<h4 translate="etudier.title">Request for a student stay</h4>
    		</div>
     </div>
     <br>
     <div class="row">
-    	<div class="col-xs-8 col-xs-offset-1 col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-lg-8 col-lg-offset-1">
+    	<div class="col-xs-10 col-xs-offset-1 col-sm-offset-2">
     		<h3 translate="etudier.step.title">5 steps for your request</h3>
     	</div>
    	</div>
    	<br><br>
     <div class="row">
-	    <div class="col-xs-1 col-sm-1 col-sm-offset-1">
+	    <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2">
 	    	<span class="step-number-align">
 	    		<div class="step-number">1</div>
 	    	</span>
 	    </div>
-	    <div class="col-xs-10 col-sm-10 step-text">
+	    <div class="col-xs-9 step-text">
 	    	<p translate="etudier.identity.step.long">Identity</p>
 	    </div>
 	</div>
     <div class="row">
-	    <div class="col-xs-1 col-sm-1 col-sm-offset-1">
+	    <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2">
 	    	<span class="step-number-align">
 	    		<div class="step-number">2</div>
 	    	</span>
 	    </div>
-	    <div class="col-xs-10 col-sm-10 step-text">
+	    <div class="col-xs-9 step-text">
 	    	<p translate="etudier.address.step.long">Address</p>
 	    </div>
 	</div>
     <div class="row">
-	    <div class="col-xs-1 col-sm-1 col-sm-offset-1">
+	    <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2">
 	    	<span class="step-number-align">
 	    		<div class="step-number">3</div>
 	    	</span>
 	    </div>
-	    <div class="col-xs-10 col-sm-10 step-text">
+	    <div class="col-xs-9 step-text">
 	    	<p translate="etudier.project.step.long">Project</p>
 	    </div>
 	</div>
     <div class="row">
-	    <div class="col-xs-1 col-sm-1 col-sm-offset-1">
+	    <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2">
 	    	<span class="step-number-align">
 	    		<div class="step-number">4</div>
 	    	</span>
 	    </div>
-	    <div class="col-xs-10 col-sm-10 step-text">
+	    <div class="col-xs-9 step-text">
 	    	<p translate="etudier.summary.step.long">summary</p>
 	    </div>
 	</div>
     <div class="row">
-	    <div class="col-xs-1 col-sm-1 col-sm-offset-1">
+	    <div class="col-xs-1 col-xs-offset-1 col-sm-offset-2">
 	    	<span class="step-number-align">
 	    		<div class="step-number">5</div>
 	    	</span>
 	    </div>
-	    <div class="col-xs-10 col-sm-10 step-text">
+	    <div class="col-xs-9 step-text">
 	    	<p translate="etudier.payment.step.long">Payment</p>
 	    </div>
 	</div>
 	<br>
     <div class="row">
-    	<div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1 well">
+    	<div class="col-xs-10 col-xs-offset-1 well">
     		<p>Pour pouvoir compléter votre dépôt de demande, vous devez impérativement être en possession :</p>
 			<ul>
 				<li>d'un passeport valide,</li>
